<resources>
    <string name="app_name">Aavya Farms</string>


    <string name="note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis. Sed iaculis nisi ac odio porttitor dictum. Fusce tristique nisl a diam ornare, sit amet sollicitudin tellus hendrerit. Donec dapibus a sem sit amet tempus.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis. </string>
    <string name="note_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_track_your">Login to access best rice varieties, track your orders</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="if_you_dont_have_account">If you have have an account?</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_email_or_phone">Enter phone number to send one time Password</string>
    <string name="filters_applied">Filters Applied</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="saved_text">Saved ₹5</string>
    <string name="free_delivery_msg">Shop for ₹80 more to get free delivery</string>
    <string name="select_payment">Select Payment Option</string>
    <string name="change_slot">Select slot</string>
    <string name="delivery_date_msg">If you want choose delivery date</string>
    <string name="grand_total">Grand Total</string>
    <string name="remove">Remove</string>
    <string name="buy_now">Buy Now</string>
    <string name="checkout">Checkout</string>
    <string name="all_orders">All Orders</string>
    <string name="product_details">Product Details</string>
    <string name="view_details">View Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="products">Products</string>
    <string name="clear_all">Clear All</string>
    <string name="order_status">Order Satus</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="rags">Tags</string>
    <string name="kgs">Kgs</string>
    <string name="enquiry_now">Enquiry Form</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="message_250">Message (250 characters)</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="other">Other</string>
    <string name="added_to_cart">Product Added to Cart</string>
    <string name="submit">Submit</string>
    <string name="no_products">No Products Available</string>
    <string name="cart_is_empty">Your Cart is Empty</string>
    <string name="no_address">Not yet added any address</string>
    <string name="no_order_placed">No Orders Placed Yet</string>
    <string name="continue_to_shop">Continue to Shopping</string>
    <string name="pick_address">Delivery Address</string>
    <string name="MAP_KEY">AIzaSyBdf1LlSGswAxUo9S0UNptfSRcDtJRdsDU</string>
    <string name="choose_address">Choose Address</string>
    <string name="rate_this_product">Rate This Product</string>
    <string name="view_reports">Reports</string>
    <string name="place_order">Place Order</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="close">Close</string>


</resources>