<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Logins.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="4dp"
            android:background="#588b79"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp">
            <View
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25sp"
            android:orientation="vertical"
            android:background="@drawable/login_white_round">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25sp"
                android:layout_marginTop="25sp"
                android:text="@string/otp_verification"
                android:textColor="@color/otp_header_color"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/poppins_semibold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25sp"
                android:layout_marginTop="5dp"
                android:text="@string/enter_email_or_phone"
                android:textColor="@color/otp_header_color"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25sp"
                android:text="Phone Number"
                android:textColor="@color/otp_header_color"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/poppins_semibold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25sp"
                android:orientation="horizontal"
                android:background="@drawable/round_edit_gray_light_edge">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    app:ccp_showArrow="true"
                    app:ccp_showFlag="true"
                    app:ccp_showNameCode="false"
                    app:ccp_autoFormatNumber="true"
                    app:ccp_showPhoneCode="true"
                    app:ccp_showFullName="false"
                    app:ccp_textSize="13sp"
                    app:ccp_arrowSize="13sp"
                    app:ccpDialog_keyboardAutoPopup="false"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/lightGray"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:hint="Enter phone number"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:textColorHint="@color/hintcolor"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:layout_marginBottom="25dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">
                    <LinearLayout
                        android:id="@+id/linearLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/if_you_dont_have_account"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:fontFamily="@font/poppins_semibold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/login"
                            android:textColor="@color/colorPrimary"
                            android:textSize="17sp"
                            android:fontFamily="@font/poppins_semibold" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linearVerify"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:minWidth="@dimen/_100sdp"
                        android:gravity="center_horizontal"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/round_button">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/verify"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            android:fontFamily="@font/poppins_semibold" />
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/right_arrow"
                            app:tint="@color/white"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="5dp"/>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>





        </LinearLayout>
    </LinearLayout>




</layout>