<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".categories.CategoriesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/icon_left_arrow" />

            <TextView
                android:id="@+id/txt_header"
                style="@style/textview"
                android:layout_centerVertical="true"
                android:text="@string/products"
                android:textSize="@dimen/_16sdp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/lnr_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_16sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cart"
                    app:tint="@color/green" />

                <TextView
                    android:id="@+id/txt_count"
                    style="@style/textview"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:text=""
                    android:textColor="@color/green"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/linearSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1"

                android:background="@drawable/round_edit_gray_light_edge"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="15sp"
                    android:src="@drawable/search" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:fontFamily="@font/poppins"
                    android:text="Search here"
                    android:textColor="@color/search_hint_color"
                    android:textSize="18dp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/filterButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_filter"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/filters_applied"
                    android:textColor="@color/otp_header_color"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="end"
                    android:text="@string/clear_filter"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:background="@color/white"
                app:iss_auto_cycle="true"
                app:iss_period="1000"
                app:iss_delay="1000"
                app:iss_corner_radius="8"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                app:iss_text_align="CENTER"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_all_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/layout_product_product_item" />
        </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/txt_no_data"
            style="@style/textview"
            android:layout_height="@dimen/_180sdp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/no_products"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:visibility="gone" />


    </LinearLayout>

</layout>