<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_12sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/lnr_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgProduct"
                    app:layout_constraintTop_toTopOf="@id/imgProduct">

                    <TextView
                        android:id="@+id/tvProductType"
                        style="@style/textview"
                        android:fontFamily="@font/poppins"
                        android:text=""
                        android:textColor="@color/product_name_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvProductName"
                        style="@style/textview"
                        android:fontFamily="@font/teachers_medium"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_4sdp">

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/_18sdp" />

                        <TextView
                            android:id="@+id/tvOriginalPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text=""
                            android:textColor="@color/gray"
                            android:textSize="@dimen/_12sdp" />


                    </LinearLayout>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/txtdes"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@id/lnr_text" />


                <!-- Action Buttons -->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_rate_this_product"
                    style="@style/textview"
                    android:text="@string/rate_this_product"
                    android:textColor="@color/selectedRed"
                    android:textSize="@dimen/_12sdp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:progressBackgroundTint="@color/your_empty_star_color"
                    android:progressTint="@color/your_filled_star_color"
                    android:secondaryProgressTint="@color/your_secondary_star_color"
                    android:stepSize="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_8sdp"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/lnr_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:src="@drawable/ic_trash" />

                    <TextView
                        style="@style/textview"
                        android:text="@string/remove"
                        android:textColor="@color/green" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:src="@drawable/ic_buy_now" />

                    <TextView
                        style="@style/textview"
                        android:text="@string/buy_now"
                        android:textColor="@color/green" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>